added Swagger UI (interactive docs)
